# speed_test

./: .env  .gitignore  README.md  results.md
kafka/mt-consumer/: Cargo.toml
kafka/mt-consumer/src/: main.rs
kafka/node-producer/: package.json
kafka/node-producer/src/: index.ts
kafka/plaintext-consumer/: Cargo.toml
kafka/plaintext-consumer/src/: main.rs
kafka/plaintext-producer/: Cargo.toml
kafka/plaintext-producer/src/: main.rs
kafka/rdkafka-consumer/: Cargo.toml
kafka/rdkafka-consumer/src/: main.rs
kafka/rdkafka-producer/: Cargo.toml
kafka/rdkafka-producer/src/: main.rs
kafka/text-producer/: Cargo.toml
kafka/text-producer/src/: main.rs
mongo-writes/: run_bench.sh  run_benchmark.js
mongo-writes/actix_server/: Cargo.toml
mongo-writes/actix_server/src/: main.rs
mongo-writes/rocket_server/: Cargo.toml  Rocket.toml
mongo-writes/rocket_server/src/: main.rs
mongo-writes/ts-server/: package.json
mongo-writes/ts-server/src/: server.ts
node/: index.js
plain-text/actix_server/: Cargo.toml
plain-text/actix_server/src/: main.rs
plain-text/express-server/: package.json
plain-text/rocket_server/: Cargo.toml
plain-text/rocket_server/src/: main.rs
plain-text/tide-server/: Cargo.toml
plain-text/tide-server/src/: main.rs
plain-text/ts-server/: package.json
plain-text/ts-server/src/: server.ts
redis/redis_test/: Cargo.toml
