[package]
name = "rdkafka-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = {version = "1.22.0", features = ["full"]}
