[package]
name = "text-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonfire_dependencies = { git = "ssh://git@github.com/wpa-intelligence/bonfire-dependencies.git"}
futures = "0.3.27"
rayon = "1.7.0"
rdkafka = "0.29.0"
serde = "1.0.158"
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}

